objects/TracRTC__Flow_Execution__c.object
<CustomObject>
    <description>Represents a flow execution that was requested by the end-user</description>
    <fields>
        <fullName>TracRTC__Batch_Job__c</fullName>
        <description>Holds the ID of the related batch job</description>
        <label>Batch Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Holds the size of record batches related to a given Flow Execution.</description>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Criteria_Set__c</fullName>
        <description>The set of record criteria related to the current flow execution</description>
        <label>Criteria Set</label>
        <referenceTo>TracRTC__Criteria_Set__c</referenceTo>
        <relationshipLabel>Flow Executions</relationshipLabel>
        <relationshipName>Flow_Executions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TracRTC__Day__c</fullName>
        <label>Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TracRTC__End_Date__c</fullName>
        <description>Represents the end date of recurring flow executions</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TracRTC__Flow__c</fullName>
        <description>The flow that should be executed</description>
        <label>Flow</label>
        <referenceTo>TracRTC__Flow__c</referenceTo>
        <relationshipLabel>Flow Executions</relationshipLabel>
        <relationshipName>Flow_Executions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TracRTC__Frequency__c</fullName>
        <description>The frequency in which a recurring flow execution should happen</description>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TracRTC__Scheduled_Job__c</fullName>
        <description>The ID of the related schedulable job of the current flow execution</description>
        <label>Scheduled Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Start_Date__c</fullName>
        <description>The date when the flow should be executed for the first time</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TracRTC__Time__c</fullName>
        <description>The time when the flow should be executed</description>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>TracRTC__Type__c</fullName>
        <description>The type of flow execution, e.g. one-time, recurring</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One-Time</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Flow Execution</label>
    <nameField>
        <label>Flow Execution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>